# Arbitrum-Arbitrage-Monitoring-Bot

./: .env.example  .gitignore  Agreement.txt  Cargo.toml  Core_Config_Files.txt  Detailed Explanation of Key Files copy.docx  readme.md
src/: config.rs  data.json  main.rs
src/exchange/: camelot.rs  mod.rs  model.rs  pancakeswap.rs  uniswap.rs
src/ipc_handle/: mod.rs
src/shm/: mod.rs
src/trade/: camelot.rs  mod.rs  pancake.rs  uniswap.rs
src/utils/: mod.rs  write_log.rs
src/websocket/: camelot_pancakeswap.rs  camelot_uniswap.rs  categorize_pairs.rs  mod.rs  pancakeswap_uniswap.rs  stream_handler.rs
