[package]
name = "Scanner_Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
uniswap-v3-sdk = { git = "https://github.com/nullbitx8/uniswap-v3-sdk-rs.git", features = ["extensions"] }
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
url = "2.5.4"
alloy-primitives = { version = "0.6" }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
alloy = { version = "0.13.0", features = ["full"] }
futures-util = "0.3"
ipc-channel = "0.19.0"
memmap2 = "0.9.5"
hex = "0.4.3"
chrono = "0.4.40"
futures = "0.3.31"
lazy_static = "1.5.0"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
iceoryx2 = "0.5.0"
iceoryx2-bb-container = "0.5.0"
mem = "0.5.0"
